# ptu2ics

./: CITATION.cff  LICENSE  README.md  controller.py  environment.yml  pyproject.toml  view.py
save_functions/: save_ICS.py  save_as_ics.py  save_ptufile_metadata_as_json.py
src/ptu2ics/: __main__.py  model.py
src/ptu2ics/save_functions/: save_advanced_settings_as_json.py  save_as_tif.py  save_data.py
stylesheets/: ElegantDark.qss
